<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.example.database.SignInActivity">

	<ImageView
		android:id="@+id/icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_above="@+id/layout_email_password"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:contentDescription="@string/app_name"
		android:src="@drawable/logo"/>

	<LinearLayout
		android:id="@+id/layout_email_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/field_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_email"
			android:inputType="textEmailAddress"
			android:maxLines="1"/>

		<EditText
			android:id="@+id/field_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_password"
			android:inputType="textPassword"
			android:maxLines="1"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/layout_email_password"
		android:orientation="horizontal">

		<Button
			style="?android:attr/button"
			android:id="@+id/button_sign_in"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_in"/>

		<Button
			style="?android:attr/button"
			android:id="@+id/button_sign_up"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_up"/>

	</LinearLayout>

</RelativeLayout>